update on services page after validation

--- a/temples-inn-suites/services.html
+++ b/temples-inn-suites/services.html
@@ -70,7 +70,7 @@
                     <h2>Weather Forecast</h2>
                     <div class="wea">
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                        <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
+                        <span id="icon-src"></span><figure><img src=" " alt=" " id="weathericon" /><figcaption></figcaption></figure>      
                         <hr>
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
@@ -111,7 +111,7 @@
                     <img id="prk" src="images/parking.jpg" alt="parking temple inn and suites">
                  </div>
                 <div id="text2">
-                    <h3 id="spl">Free Amenities</h3>
+                    <h3 id="free">Free Amenities</h3>
                     <ul>
                         <li>Breakfast</li>
                         <li>Exercise/workout room</li>
