--- a/temples-inn-suites/contact.html
+++ b/temples-inn-suites/contact.html
@@ -84,7 +84,7 @@
                         <fieldset id="userform">
                             <legend>User Information</legend>
                             <label class="field">Name* <input type="text" name="fname" placeholder="First Name" required></label>
-                            <label class="field">Name<input type="text" name="lname" placeholder="Last Name"></label>
+                            <label class="field">Last Name*<input type="text" name="lname" placeholder="Last Name" required></label>
                             <label class="field">Email Address* <input type="email" name="email" placeholder="user@email.org" required></label>
                             <label class="field">Phone Number<input type="tel" name="phone" placeholder="xxx xx xxx xx" pattern="^[0-9\+\s]{10,17}$" required></label>
                         
