--- a/temples-inn-suites/index.html
+++ b/temples-inn-suites/index.html
@@ -66,10 +66,11 @@
             </div>
             <section class="smallview">
                 <div id="weather">
+
                     <h2>Weather Forecast</h2>
                     <div class="wea">
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                        <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
+                        <span id="icon-src"></span><a href="reservations.html"><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure></a>     
                         <hr>
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
