Commit all changes from weatherwidget.html, weather.css, and weather.js

--- a/temples-inn-suites/index.html
+++ b/temples-inn-suites/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
+        
     </head>
     <body id="mainsection">
         <header>
@@ -69,11 +70,10 @@
 
                     <h2>Weather Forecast</h2>
                     <div class="wea">
-                        <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                        <span id="icon-src"></span><a href="weatherwidget.html"><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure></a>     
+                        <p><a href="weatherwidget.html">Plan your Trip<br>Check the Weather Here!!</a></p>
                         <hr>
-                        <p>Wind Speed: <span id="speed">15</span> km/h</p>
-                        <p>Humidity: <span id="humidity"></span></p>
+                        <span id="icon-src"></span><img src="./images/WeatherIcon1.jpg" alt="" id="weathericon" /></a>
+                        <hr>
                     </div>
                 </div>
                 <div id="booking">
