--- a/temples-inn-suites/reservations.html
+++ b/temples-inn-suites/reservations.html
@@ -102,6 +102,16 @@
                                 <option value="accra">Accra - Ghana</option>
                                 <option value="aba">Aba - Nigeria</option>
                                 <option value="kinshasa">Kinshasa - RDC</option>
+                                <option value="durban">Stockholm - Sweden</option>
+                                <option value="joburg">Preston - England </option>
+                                <option value="accra">Bern - Switzerland</option>
+                                <option value="aba">Frankfurt - Germany</option>
+                                <option value="kinshasa">Helsinki - Finland</option>
+                                <option value="durban">Madrid - Spain</option>
+                                <option value="joburg">Kyuiv - Ukraine</option>
+                                <option value="accra">Taipei - Taiwan</option>
+                                <option value="aba">Seoul - Korea</option>
+                                <option value="kinshasa">Tokyo - Japan</option>
                             </select>
                         </div>
                         <div class="sbs">
